k8s/network-garden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab
  labels:
    app: web-check
