k8s/network-garden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-check-svc
  namespace: lab
  labels:
    app: web-check
spec:
  type: ClusterIP
  selector:
    app: web-check
  ports:
    - name: http
      port: 8080
      targetPort: 3000
      protocol: TCP
