k8s/network-garden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-check-route
  namespace: lab
  labels:
    app: web-check
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - course-7.network.garden
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: web-check-svc
          port: 8080
